# pisicevir

./: .gitignore  DEBIAN-BUILD.md  DEBIAN-BUILD.tr.md  LICENSE  README.md  README.tr.md  pyproject.toml
.github/: ci-runtime-validation.md  dependabot.yml
.github/workflows/: debian-package-tests.yml  release-deb.yml  release.yml  unit-tests.yml
debian/: README.source  changelog  control  copyright  install  org.caracal.Pisicevir.desktop  pisicevir-gui.install  pisicevir.install  rules
debian/tests/: control  smoke
src/pisicevir/: cli.py  gui.py
src/pisicevir/analysis/: apt_policy.py  classifier.py  dependencies.py  dependency_resolution.py  planning.py
src/pisicevir/linter/: linter.py
src/pisicevir/models/: debian.py  pisi.py  source.py
src/pisicevir/renderers/: actions.py  generator.py  pspec.py
src/pisicevir/source_adapters/: deb.py
src/pisicevir/validation/: __init__.py  validator.py
tests/: test_classifier.py  test_cli.py  test_components.py  test_deb_adapter.py  test_dependencies.py  test_gui.py  test_integration.py  test_release_tools.py
tools/: __init__.py  generate_debian_packaging.py  release_metadata.py  verify_debian_artifacts.py
